--- a/package.json
+++ b/package.json
@@ -2,7 +2,16 @@
   "name": "sys_anal",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Plump Albert",
+    "email": "plumpalbert@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:PlumpAlbert/sys_anal.git"
+  },
   "dependencies": {
+    "@types/d3": "^5.7.1",
     "@types/jest": "24.0.11",
     "@types/node": "11.11.6",
     "@types/react": "16.8.8",
