--- a/package.json
+++ b/package.json
@@ -11,16 +11,9 @@
     "url": "git@github.com:PlumpAlbert/sys_anal.git"
   },
   "dependencies": {
-    "@types/d3": "^5.7.1",
-    "@types/jest": "24.0.11",
-    "@types/node": "11.11.6",
-    "@types/react": "16.8.8",
-    "@types/react-dom": "16.8.3",
     "d3": "^5.9.2",
     "react": "^16.8.5",
-    "react-dom": "^16.8.5",
-    "react-scripts": "2.1.8",
-    "typescript": "3.3.4000"
+    "react-dom": "^16.8.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,5 +29,19 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/react-redux": "^7.0.6",
+    "@types/d3": "^5.7.1",
+    "@types/jest": "24.0.11",
+    "@types/node": "11.11.6",
+    "@types/react": "16.8.8",
+    "@types/react-dom": "16.8.3",
+    "@types/redux": "^3.6.0",
+    "react-scripts": "2.1.8",
+    "typescript": "3.3.4000",
+    "react-redux": "^7.0.1",
+    "redux": "^4.0.1",
+    "typesafe-actions": "^4.0.0"
+  }
 }
